--- a/session_config.json
+++ b/session_config.json
@@ -1,10 +1,17 @@
 {
-    "latest_session_key": 9979,
+    "latest_session_key": 9964,
     "sessions": {
         "9979": {
             "totalLaps": 78,
             "notes": "Add a note here if you like",
             "flag": "images/mon.svg"
+        }
+    }
+    "sessions": {
+        "9979": {
+            "totalLaps": -,
+            "notes": "Add a note here if you like",
+            "flag": "images/esp.svg"
         }
     }
 }
