--- a/session_config.json
+++ b/session_config.json
@@ -9,7 +9,7 @@
     }
     "sessions": {
         "9979": {
-            "totalLaps": -,
+            "totalLaps": 0,
             "notes": "Add a note here if you like",
             "flag": "images/esp.svg"
         }
